--- a/templates/test.html
+++ b/templates/test.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="styleshet" type='text/css' href='/static/'>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<h1>Hello {{ name }}!</h1>
 </body>
 </html>
+
